[package]
name = "kuna_agnostic"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agnostic = { git = "https://github.com/sonicxconst1/agnostic.git", branch="master" }
kuna_sdk = { git = "https://github.com/sonicxconst1/kuna_sdk.git", branch="master" }
futures = { version = "0.*" }
hyper = { version = "0.*", features = ["client"] }
log = { versio = "0.*" }
